# dumpling

./: .gitignore  Cargo.toml  Instance.md  README.md  index.html  test-miniwiki
content/: Instance.md
content/Instances/ABTestService/: index.md
content/Instances/Accessory/: index.md
content/Instances/Accoutrement/: AttachmentForward.md  AttachmentPoint.md  AttachmentPos.md  AttachmentRight.md  AttachmentUp.md  index.md
content/Instances/AdService/: index.md
content/Instances/AdvancedDragger/: index.md
content/Instances/AlignOrientation/: AlignType.md  MaxAngularVelocity.md  MaxTorque.md  PrimaryAxisOnly.md  ReactionTorqueEnabled.md  Responsiveness.md  RigidityEnabled.md  index.md
content/Instances/AlignPosition/: ApplyAtCenterOfMass.md  MaxForce.md  MaxVelocity.md  ReactionForceEnabled.md  Responsiveness.md  RigidityEnabled.md  index.md
content/Instances/AnalysticsSettings/: index.md
content/Instances/AnalyticsService/: FireEvent.md  index.md
content/Instances/AngularVelocity/: AngularVelocity.md  MaxTorque.md  RelativeTo.md  index.md
content/Instances/Animation/: AnimationId.md  index.md
content/Instances/AnimationController/: AnimationPlayed.md  GetPlayingAnimationTracks.md  LoadAnimation.md  index.md
content/Instances/AnimationTrack/: AdjustSpeed.md  AdjustWeight.md  Animation.md  DidLoop.md  Length.md  (+14 more)
resources/: miniwiki.css
src/: database.rs  devhub.rs  dump.rs  dump_devhub.rs  heuristics.rs  main.rs  mini.rs  miniwiki.rs  reflection_metadata.rs  supplement.rs  templating.rs
supplemental/: Instance.md
test-files/: devhub-Part.json
(+2320 files in other folders)
