[package]
name = "dumpling"
version = "0.1.0"
authors = ["lgreathouse <me@lpghatguy.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
lazy_static = "1.0"
pulldown-cmark = { version = "0.6.0", default-features = false }
quick-xml = "0.13.0"
reqwest = "0.9.18"
ritz = "0.1.0"
roblox_install = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.0.8"
toml = "0.4"
